6b74d6b chore(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_nb.properties
+++ b/i18n/i18n_app_nb.properties
@@ -210,7 +210,7 @@ select_program=Valgt program
 select_service=Select service
 select_stage=Select stage
 select_sub_units=Velg underenheter
-select_year=Select year
+select_year=Velg \u00e5r
 service_url=Service URL
 share=Del
 share_with_other_people=Share with others
