--- a/i18n/i18n_app_zh_CN.properties
+++ b/i18n/i18n_app_zh_CN.properties
@@ -1,20 +1,20 @@
 about=\u5173\u4e8e
 add_legend=Add legend
 add_new=\u65b0\u52a0
-address=Address
+address=\u5730\u5740
 add_to_dashboard=Add to dashboard
 aggregation_type=\u6c47\u603b\u7c7b\u578b
 allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
-attribution=Attribution
+attribution=\u5c5e\u6027
 automatic=\u81ea\u52a8
 average=\u5e73\u5747
-bimonthly=Bi-monthly
+bimonthly=\u6bcf\u4e24\u6708
 boundary_layer=Boundary layer
 by_data_element=\u6309\u6570\u636e\u5143
 cancel=\u53d6\u6d88
-can_edit_and_view=Can edit and view
-can_view=Can view
+can_edit_and_view=\u53ef\u7f16\u8f91\u548c\u67e5\u770b
+can_view=\u53ef\u67e5\u770b
 chart=\u56fe\u8868
 classes_method=Classes / method
 clear=\u6e05\u9664
@@ -23,18 +23,18 @@ clustering=Clustering
 code=\u4ee3\u7801
 color_scale=Color scale
 coordinate_field=Coordinate field
-coordinates=Coordinates
+coordinates=\u5750\u6807
 coordinates_could_not_be_loaded=Coordinates could not be loaded
 count=\u8ba1\u6570
 create=\u521b\u5efa
-created_by=Created by
+created_by=\u521b\u5efa\u81ea
 current_legends=Current legends
 daily=\u6bcf\u5929
 data=\u6570\u636e
 data_and_periods=Data and periods
 dataelement=\u6570\u636e\u5143
-dataelement_group=Data element group
-dataset=Data set
+dataelement_group=\u6570\u636e\u5143\u7ec4
+dataset=\u6570\u636e\u96c6
 delete=\u5220\u9664
 delete_favorite=Delete favorite
 details=\u8be6\u60c5
@@ -42,7 +42,7 @@ download=\u4e0b\u8f7d
 download_map_as_png=Download map as PNG
 drill_down_one_level=Drill down one level
 drill_up_one_level=Drill up one level
-duplicate=Duplicate
+duplicate=\u91cd\u590d\u7684
 earthengine_layer=Google Earth Engine
 earth_engine_layer_legend=Google Earth Engine legend
 elevation=Elevation
@@ -76,7 +76,7 @@ google_streets=Google Streets
 go_to_charts=Go to charts
 go_to_pivot_tables=Go to pivot tables
 greater_than=\u5927\u4e8e
-group=Group
+group=\u7ec4
 group_nearby_events=Group nearby events
 groups=\u7ec4
 groupset=Group set
@@ -86,7 +86,7 @@ highlight_color=Highlight color
 high_size=High size
 home=\u9996\u9875
 indicator=\u6307\u6807
-indicator_group=Indicator group
+indicator_group=\u6307\u6807\u7ec4
 information=Information
 infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
@@ -112,11 +112,11 @@ last_5_years=\u6700\u8fd1\u4e94\u5e74
 last_year=\u53bb\u5e74
 latitude=\u7ef4\u5ea6
 layer=Layer
-layers=Layers
+layers=\u56fe\u5c42
 layer_stack_transparency=Layer stack / opacity
 legend_name=Legend name
 legend_name_is_required=Legend name is required
-legends=Legends
+legends=\u56fe\u4f8b
 legendset=Legend set
 legend_sets_available=legend sets available
 legend_set_name=Legend set name
@@ -160,18 +160,18 @@ open_this_map_as_table=Open this map as table
 options=\u9009\u9879
 organisation_unit=\u673a\u6784
 organisation_unit_group_icons=Organisation unit group icons
-organisationunit_groupset=Organisation unit group set
-organisation_units=Organisation units
-organisationunit_search=Organisation unit search
+organisationunit_groupset=\u7ec4\u7ec7\u673a\u6784\u7ec4\u96c6
+organisation_units=\u7ec4\u7ec7\u673a\u6784
+organisationunit_search=\u7ec4\u7ec7\u673a\u6784\u641c\u7d22
 osm_light=OSM Light
 overwrite=Overwrite
 overwrite_favorite=Overwrite favorite
 page=\u9875
 parent_unit=Parent unit
 period=\u671f\u95f4
-period_type=Period type
+period_type=\u5468\u671f\u7c7b\u578b
 phone_number=\u7535\u8bdd\u53f7\u7801
-placement=Placement
+placement=\u4f4d\u7f6e
 please_create_map_first=Please create a map first
 please_enter_a_name=Please enter a name
 please_enter_map_title=Please enter a map title
@@ -183,18 +183,18 @@ predefined=Predefined
 previous=\u524d\u4e00
 program=\u9879\u76ee
 program_indicators=Program indicators
-public_access=Public access
+public_access=\u516c\u5f00\u8bbf\u95ee
 quarterly=\u5b63\u5ea6
 relative=Relative
 relocate=Relocate
 relocate_facility=Relocate facility
 remove=\u79fb\u9664
 rename=Rename
-reporting_rates=Reporting rates
+reporting_rates=\u4e0a\u62a5\u7387
 revision=Revision
 search=\u641c\u7d22
 search_for_favorites=Search for favorites
-search_for_user_groups=Search for user groups
+search_for_user_groups=\u641c\u7d22\u7528\u6237\u7ec4
 select=\u9009\u62e9
 select_groups=Select groups
 selection_mode=Selection mode
@@ -206,7 +206,7 @@ select_organisation_unit_groups=Select organisation unit groups
 select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Select organisation units
 select_period=Select period
-select_program=Select program
+select_program=\u9009\u62e9\u9879\u76ee
 select_service=Select service
 select_stage=Select stage
 select_sub_units=Select sub-units
@@ -214,12 +214,12 @@ select_year=Select year
 service_url=Service URL
 share=\u5171\u4eab
 share_with_other_people=Share with others
-sharing_settings=Sharing settings
+sharing_settings=\u5171\u4eab\u8bbe\u7f6e
 show=\u663e\u793a
 show_circular_area=Show circular area with radius (m)
 show_information_sheet=Show information
 show_lon_lat=Show longitude/latitude
-sixmonthly=Six-monthly
+sixmonthly=\u516d\u4e2a\u6708
 sixmonthly_april=Six-monthly April
 stage=Stage
 start_date=\u5f00\u59cb\u65e5\u671f
@@ -250,7 +250,7 @@ this_week=\u672c\u5468
 this_year=\u4eca\u5e74
 time_since_last_data_update=Elapsed time since last data update
 today=\u4eca\u5929
-totals=Totals
+totals=\u603b\u5171
 update=\u66f4\u65b0
 username=\u7528\u6237\u540d
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
@@ -259,7 +259,7 @@ user_ou=User OU
 user_sub_units=User sub-units
 user_sub_x2_units=User sub-x2-units
 value=\u503c
-value_type=Value type
+value_type=\u503c\u7c7b\u578b
 variance=\u65b9\u5dee
 version=\u7248\u672c
 weekly=\u6bcf\u5468
