111f7b4 chore(translations): sync translations from transifex (v29)

--- a/i18n/i18n_app_ar_IQ.properties
+++ b/i18n/i18n_app_ar_IQ.properties
@@ -76,7 +76,7 @@ google_streets=Google Streets
 go_to_charts=Go to charts
 go_to_pivot_tables=Go to pivot tables
 greater_than=Greater than
-group=Group
+group=\u0627\u0644\u0645\u062c\u0645\u0648\u0639\u0629
 group_nearby_events=Group nearby events
 groups=Groups
 groupset=Group set
@@ -258,7 +258,7 @@ user_organisation_unit=User organisation unit
 user_ou=User OU
 user_sub_units=\u0648\u062d\u062f\u0627\u062a \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645 \u0627\u0644\u0641\u0631\u0639\u064a\u0629
 user_sub_x2_units=\u0648\u062d\u062f\u0627\u062a \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645 \u0627\u0644\u0641\u0631\u0639\u064a\u0629 \u0645\u0646 \u0627\u0644\u0645\u0633\u062a\u0648\u0649 \u0627\u0644\u062b\u0627\u0646\u064a
-value=Value
+value=\u0627\u0644\u0642\u064a\u0645\u0629
 value_type=Value type
 variance=\u0627\u0644\u062a\u0628\u0627\u064a\u0646
 version=\u0627\u0644\u0625\u0635\u062f\u0627\u0631
@@ -271,7 +271,7 @@ write_interpretation=\u0643\u062a\u0627\u0628\u0629 \u062a\u0641\u0633\u064a\u06
 write_your_interpretation=Write your interpretation
 yearly=\u0633\u0646\u0648\u064a
 yes=\u0646\u0639\u0645
-yesterday=Yesterday
+yesterday=\u0627\u0644\u0623\u0645\u0633
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=\u0644\u064a\u0633 \u0644\u062f\u064a\u0643 \u0635\u0644\u0627\u062d\u064a\u0629 \u0627\u0644\u0648\u0635\u0648\u0644 \u0625\u0644\u0649 \u062c\u0645\u064a\u0639 \u0639\u0646\u0627\u0635\u0631 \u0647\u0630\u0647 \u0627\u0644\u0645\u0641\u0636\u0644\u0629
 
