daa08f4 chore(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_es.properties
+++ b/i18n/i18n_app_es.properties
@@ -76,7 +76,7 @@ google_streets=Google Calles
 go_to_charts=Ir a gr\u00e1ficos
 go_to_pivot_tables=Ir a tablas din\u00e1micas
 greater_than=Mayor que
-group=Group
+group=Grupo
 group_nearby_events=Group nearby events
 groups=Grupos
 groupset=Set de grupos
@@ -180,7 +180,7 @@ point_radius=Point radius
 population_density=Densidad de poblaci\u00f3n
 precipitation=Precipitaci\u00f3n
 predefined=Predefinido
-previous=Previous
+previous=Anterior
 program=Programa
 program_indicators=Indicadores de programa
 public_access=Acceso p\u00fablico
@@ -227,7 +227,7 @@ start_end_dates=Fechas de inicio y fin
 start_end_value=Valor Inicial/Final
 stddev=Desviaci\u00f3n est\u00e1ndar
 steps=Pasos
-style=Style
+style=Estilo
 sub_units=Sub-unidades
 sub_x2_units=Sub-unidades-x2
 sum=Suma
