--- a/i18n/i18n_app_id.properties
+++ b/i18n/i18n_app_id.properties
@@ -38,7 +38,7 @@ dataset=Data set
 delete=hapus
 delete_favorite=Hapus favorit
 details=Rincian
-download=Download
+download=Unduh
 download_map_as_png=Download peta dalam bentuk PNG
 drill_down_one_level=Drill down one level
 drill_up_one_level=Drill up one level
@@ -164,7 +164,7 @@ organisationunit_groupset=Set grup unit organisasi
 organisation_units=Unit organisasi
 organisationunit_search=Pencarian unit organisasi
 osm_light=OSM Light
-overwrite=Overwrite
+overwrite=Timpa
 overwrite_favorite=Timpa favorit
 page=Halaman
 parent_unit=Parent unit
@@ -189,7 +189,7 @@ relative=Relative
 relocate=Pindahkan
 relocate_facility=Relocate facility
 remove=Hapus
-rename=Rename
+rename=Ganti nama
 reporting_rates=Tingkat pelaporan
 revision=Revisi
 search=Pencarian
@@ -242,7 +242,7 @@ thematic_layer_2_legend=Legenda layer tematik 2
 thematic_layer_3_legend=Thematic layer 3 legend
 thematic_layer_4_legend=Thematic layer 4 legend
 this_bimonth=2 bulan ini
-this_financial_year=This financial year
+this_financial_year=Tahun finansial ini
 this_month=Bulan ini
 this_quarter=Triwulan ini
 this_sixmonth=6 bulan ini
@@ -256,8 +256,8 @@ username=User name
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=User organisation unit
 user_ou=User OU
-user_sub_units=User sub-units
-user_sub_x2_units=User sub-x2-units
+user_sub_units=Subunit pengguna
+user_sub_x2_units=2x subunit pengguna
 value=Nilai
 value_type=Tipe nilai
 variance=Varian
