--- a/i18n/i18n_app_pt.properties
+++ b/i18n/i18n_app_pt.properties
@@ -180,7 +180,7 @@ point_radius=Point radius
 population_density=Densidade populacional
 precipitation=Precipita\u00e7\u00e3o
 predefined=Predefinido
-previous=Previous
+previous=Anterior
 program=Programa
 program_indicators=Indicador do programa
 public_access=Acesso p\u00fablico
