--- a/i18n/i18n_app_sv.properties
+++ b/i18n/i18n_app_sv.properties
@@ -129,8 +129,8 @@ low_color_size=L\u00e5g f\u00e4rg / storlek
 low_size=liten storlek
 manage_favorites=Hantera favoriter
 map=Karta
-max=Max
-min=Min
+max=max
+min=min
 min_max_c=Min/max \u00b0C
 min_max_elevation=Min/max h\u00f6jd
 min_max_people=Min/max personner
@@ -180,7 +180,7 @@ point_radius=Point radius
 population_density=Befolkningst\u00e4thet
 precipitation=Nederb\u00f6rd
 predefined=F\u00f6rdefinierad
-previous=Previous
+previous=Tidigare
 program=Program
 program_indicators=programindikatorer
 public_access=allm\u00e4nhetens tillg\u00e5ng
