--- a/i18n/i18n_app_lo.properties
+++ b/i18n/i18n_app_lo.properties
@@ -20,7 +20,7 @@ classes_method=\u0e82\u0eb0\u0edc\u0eb2\u0e94\u0e82\u0ead\u0e87\u0eaa\u0eb5
 clear=\u0ea5\u0ec9\u0eb2\u0e87\u0e82\u0ecd\u0ec9\u0ea1\u0eb9\u0e99
 clear_map=\u0ea5\u0ec9\u0eb2\u0e87\u0ec1\u0e9c\u0e99\u0e97\u0eb5\u0ec8
 clustering=Clustering
-code=Code
+code=\u0ea5\u0eb0\u0eab\u0eb1\u0e94
 color_scale=\u0eaa\u0eb0\u0e99\u0eb4\u0e94\u0e82\u0ead\u0e87\u0eaa\u0eb5
 coordinate_field=Coordinate field
 coordinates=Coordinates
