--- a/i18n/i18n_app_my.properties
+++ b/i18n/i18n_app_my.properties
@@ -26,7 +26,7 @@ coordinate_field=Coordinate field
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
 count=\u1021\u101b\u1031\u1021\u1010\u103d\u1000\u103a
-create=Create
+create=\u1016\u1014\u103a\u1010\u102e\u1038\u101e\u100a\u103a
 created_by=Created by
 current_legends=Current legends
 daily=\u1014\u1031\u1037\u1005\u1009\u103a
@@ -136,7 +136,7 @@ min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
-monthly=Monthly
+monthly=\u101c\u1005\u1009\u103a
 name=\u1021\u1019\u100a\u103a
 next=\u101b\u103e\u1031\u1037\u101e\u102d\u102f\u1037
 nighttime_lights=Nighttime lights
@@ -269,7 +269,7 @@ weekly_saturday=Weekly (Start Saturday)
 weekly_sunday=Weekly (Start Sunday)
 write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
-yearly=Yearly
+yearly=\u1014\u103e\u1005\u103a\u1005\u1009\u103a
 yes=\u1019\u103e\u1014\u103a
 yesterday=Yesterday
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
