010e449 chore(translations): sync translations from transifex (v29)

--- a/i18n/i18n_app_my.properties
+++ b/i18n/i18n_app_my.properties
@@ -84,7 +84,7 @@ has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
-home=Home
+home=\u1015\u1004\u103a\u1019\u1005\u102c\u1019\u103b\u1000\u103a\u1014\u103e\u102c
 indicator=indicator
 indicator_group=indicator \u1021\u102f\u1015\u103a\u1005\u102f
 information=Information
