d6d3f63 chore(translations): sync translations from transifex (v30)

--- a/i18n/i18n_app_nb.properties
+++ b/i18n/i18n_app_nb.properties
@@ -1,16 +1,16 @@
 about=Om
-add_legend=Add legend
+add_legend=Legg til tegnforklaring
 add_new=Legg til ny
 address=Adresse
-add_to_dashboard=Add to dashboard
+add_to_dashboard=Legg til p\u00e5 dashbord
 aggregation_type=Aggregasjonstype
 allow_external_access=Tillat ekstern tilgang
-and_or_lower_than=And/or lower than
+and_or_lower_than=Og/eller lavere enn
 attribution=Attributt
 automatic=Automatisk
 average=Gjennomsnitt
 bimonthly=To-m\u00e5nedlig
-boundary_layer=Boundary layer
+boundary_layer=Grenselag
 by_data_element=Per datalement
 cancel=Avbryt
 can_edit_and_view=Kan redigere og se
@@ -18,20 +18,20 @@ can_view=Kan se
 chart=Diagram
 classes_method=Classes / method
 clear=Fjern
-clear_map=Clear map
-clustering=Clustering
+clear_map=T\u00f8m kart
+clustering=Gruppering
 code=Kode
-color_scale=Color scale
+color_scale=Fargeskala
 coordinate_field=Koordinatfelt
 coordinates=Koordinater
-coordinates_could_not_be_loaded=Coordinates could not be loaded
+coordinates_could_not_be_loaded=Koordinater kunne ikke lastes
 count=Antall
 create=Opprett
 created_by=Opprettet av
-current_legends=Current legends
+current_legends=Gjeldende tegnforklaringer
 daily=Daglig
 data=Data
-data_and_periods=Data and periods
+data_and_periods=Data og perioder
 dataelement=Dataelement
 dataelement_group=Dataelementgruppe
 dataset=Datasett
@@ -39,59 +39,59 @@ delete=Slett
 delete_favorite=Slett favoritt
 details=Detaljer
 download=Last ned
-download_map_as_png=Download map as PNG
+download_map_as_png=Last ned kart som PNG
 drill_down_one_level=Drill ned ett niv\u00e5
 drill_up_one_level=Drill opp ett niv\u00e5
 duplicate=Duplisere
-earthengine_layer=Google Earth Engine
-earth_engine_layer_legend=Google Earth Engine legend
-elevation=Elevation
+earthengine_layer=Google Earth motor
+earth_engine_layer_legend=Google Earth motor tegnforklaring
+elevation=H\u00f8yde
 edit_layer=Rediger lag
-edit_legend=Edit legend
+edit_legend=Rediger tegnforklaring
 email=E-post
 end_date=Sluttdato
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
-equal_counts=Equal counts
-equal_intervals=Equal intervals
+equal_counts=Likt antall
+equal_intervals=Like intervaller
 event_data_item=Hendelsesdatapunkt
 event_data_items=Hendelsesdatapunkter
-event_layer=Event layer
+event_layer=Hendelseslag
 event_location=Hendelsessted
 event_time=Hendelsestid
-external_layer=External layer
-external_layer_legend=External layer legend
-facility_layer=Facility layer
-facility_layer_export_currently_not_supported=Facility layer export currently not supported
-facility_layer_legend=Facility layer legend
-favorite_name=Favorite name
-favorite_outdated_create_new=Favorite is outdated - please create a new one
+external_layer=Eksternt lag
+external_layer_legend=Eksternt lag tegnforklaring
+facility_layer=Bygningslag
+facility_layer_export_currently_not_supported=Fasilitetlag eksport er for \u00f8yeblikket ikke st\u00f8ttet
+facility_layer_legend=Fasilitetlag tegnforklaring
+favorite_name=Favorittnavn
+favorite_outdated_create_new=Favoritten er utdatert - vennligst opprett en ny
 favorites=Favoritter
 filter=Filter
-filter_by_value=Filter by value
+filter_by_value=Filtrer etter verdi
 financial_april=Regnskaps\u00e5r (start april)
 financial_july=Regnskaps\u00e5r (start juli)
 financial_oct=Regnskaps\u00e5r (start oktober)
 google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=G\u00e5 til diagrammer
-go_to_pivot_tables=Go to pivot tables
+go_to_pivot_tables=G\u00e5 til pivottabeller
 greater_than=St\u00f8rre enn
 group=Gruppe
-group_nearby_events=Group nearby events
+group_nearby_events=Grupper n\u00e6rliggende hendelser
 groups=Grupper
 groupset=Gruppesett
-has_no_orgunits=has no organisation units
+has_no_orgunits=har ingen organisasjonsenheter
 high_color_size=High color / size
-highlight_color=Highlight color
+highlight_color=Uthev farge
 high_size=H\u00f8y st\u00f8rrelse
 home=Hjem
 indicator=Indikator
 indicator_group=Indikatorgruppe
-information=Information
-infrastructural_data=Infrastructural data
-invalid_parameter=Invalid parameter
+information=Informasjon
+infrastructural_data=Infrastrukturell data
+invalid_parameter=Ugyldig parameter
 item_type=Elementtype
-landcover=Landcover
+landcover=Arealdekke
 last_2_sixmonths=Siste to halv\u00e5r
 last_3_months=Siste 3 m\u00e5neder
 last_4_quarters=Siste 4 kvartaler
@@ -111,17 +111,17 @@ last_week=Forrige uke
 last_5_years=Siste 5 \u00e5r
 last_year=I fjor
 latitude=Breddegrad
-layer=Layer
+layer=Lag
 layers=Lag
 layer_stack_transparency=Layer stack / opacity
-legend_name=Legend name
-legend_name_is_required=Legend name is required
+legend_name=Tegnforklaringsnavn
+legend_name_is_required=Tegnforklaringsnavn er p\u00e5krevd
 legends=Tegnforklaringer
 legendset=Tegnforklaringssett
-legend_sets_available=legend sets available
-legend_set_name=Legend set name
-legendsets=Legend sets
-legend_symbolizer=Symbolizer
+legend_sets_available=Tegnforklaringssett er tilgjengelig
+legend_set_name=Tegnforklaringsettnavn
+legendsets=Tegnforklaringsett
+legend_symbolizer=Symbolist
 legend_type=Tegnforklaringtype
 level=Niv\u00e5
 longitude=Lengdegrad
@@ -132,34 +132,34 @@ map=Kart
 max=Max
 min=Min
 min_max_c=Min/max \u00c2\u00b0C
-min_max_elevation=Min/max elevation
-min_max_people=Min/max people
-min_max_rainfall=Min/max rainfall
-min_max_value=Min/max value
+min_max_elevation=Min/Max h\u00f8yde
+min_max_people=Min/Max personer
+min_max_rainfall=Min/max nedb\u00f8r
+min_max_value=Min/max verdi
 monthly=M\u00e5nedlig
 name=Navn
 next=Neste
-nighttime_lights=Nighttime lights
+nighttime_lights=Kveldslys
 no=Nei
-no_groupset_selected=No group set selected
-no_map_to_save=No map to save
+no_groupset_selected=Ingen gruppesett er valgt
+no_map_to_save=Ingen kart \u00e5 lagre
 none=Ingen
-no_event_coordinates_found=No event coordinates found
-no_organisation_unit_levels=No organisation unit levels
-no_organisation_units_specified=No organisation units specified
+no_event_coordinates_found=Ingen hendelseskoordinater funnet
+no_organisation_unit_levels=Ingen organisasjonsenhetniv\u00e5er
+no_organisation_units_specified=Ingen organisasjonsenheter er spesifisert
 no_period_selected=Ingen periode valgt
-no_program_stage_selected=No program stage selected
-no_selected_items=No selected items
-no_system_info_found=No system info found
-no_valid_coordinates_found=No valid coordinates found
+no_program_stage_selected=Ingen programfase valgt
+no_selected_items=Ingen valgte elementer
+no_system_info_found=Ingen systeminformasjon funnet
+no_valid_coordinates_found=Ingen gyldige koordinater funnet
 open_last_chart=\u00c5pne siste diagram
 open_last_table=\u00c5pne forrige tabell
 openstreetmap=\u00c5pneGateKart
-open_this_map_as_chart=Open this map as chart
-open_this_map_as_table=Open this map as table
+open_this_map_as_chart=\u00c5pne dette kartet som diagram
+open_this_map_as_table=\u00c5pne dette kartet som tabell
 options=Alternativer
 organisation_unit=Organisasjonsenhet
-organisation_unit_group_icons=Organisation unit group icons
+organisation_unit_group_icons=Organisasjonsenhet gruppeikoner
 organisationunit_groupset=Organisasjonsenhetgruppesett
 organisation_units=Organisasjonsenheter
 organisationunit_search=Organisasjonsenhet s\u00f8k
@@ -172,13 +172,13 @@ period=Periode
 period_type=Periodetype
 phone_number=Telefonnummer
 placement=Plassering
-please_create_map_first=Please create a map first
-please_enter_a_name=Please enter a name
-please_enter_map_title=Please enter a map title
-point_color=Point color
+please_create_map_first=Vennligst opprett et kart f\u00f8rst
+please_enter_a_name=Vennligst legg inn et navn
+please_enter_map_title=Vennligst legg til en karttittel
+point_color=Punktfarge
 point_radius=Punktradius
-population_density=Population density
-precipitation=Precipitation
+population_density=Befolkningstetthet
+precipitation=Tolkning
 predefined=Forh\u00e5ndsdefinert 
 previous=Forrige
 program=Program
@@ -187,7 +187,7 @@ public_access=Offentlig tilgang
 quarterly=Kvartalsvis
 relative=Relativ
 relocate=Omplasser
-relocate_facility=Relocate facility
+relocate_facility=Omplasser anlegg
 remove=Fjern
 rename=Gi nytt navn
 reporting_rates=Rapporteringsrater
@@ -198,49 +198,49 @@ search_for_user_groups=S\u00f8k etter brukergrupper
 select=Velg
 select_groups=Velg grupper
 selection_mode=Valgmodus
-select_dataset=Select dataset
-select_layer=Select layer
-select_layer_from_google_earth_engine=Select layer from Google Earth Engine
+select_dataset=Velg datasett
+select_layer=Velg lag
+select_layer_from_google_earth_engine=Velg lag fra Google Earth motor
 select_levels=Velg niv\u00e5er
 select_organisation_unit_groups=Velg organisasjonsenhetsgrupper
 select_organisation_unit_levels=Velg organisasjonsenhetsniv\u00e5er
 select_organisation_units=Velg organisasjonsenheter
-select_period=Select period
+select_period=Velg periode
 select_program=Valgt program
-select_service=Select service
-select_stage=Select stage
+select_service=Velg service
+select_stage=Velg fase
 select_sub_units=Velg underenheter
 select_year=Velg \u00e5r
-service_url=Service URL
+service_url=Tjeneste URL
 share=Del
-share_with_other_people=Share with others
+share_with_other_people=Del med andre
 sharing_settings=Deleinnstillinger
 show=Vis
-show_circular_area=Show circular area with radius (m)
+show_circular_area=Vis sirkul\u00e6rt omr\u00e5de med radius (m)
 show_information_sheet=Vis informasjon
 show_lon_lat=Vis lengdegrad/breddegrad
 sixmonthly=Halv\u00e5rlig
 sixmonthly_april=Halv\u00e5rig April
 stage=Fase
 start_date=Startdato
-start_end_dates=Start/end dates
-start_end_value=Start/end value
+start_end_dates=Start/slutt datoer
+start_end_value=Start/slutt verdi
 stddev=Standardavvik
 steps=Trinn
 style=Stil
-sub_units=Sub-units
-sub_x2_units=Sub-x2-units
+sub_units=Under-enheter
+sub_x2_units=Under-x2-enheter
 sum=Sum
 swap_lon_lat=Bytt lengdegrad/breddegrad
-symbol_layer=Facility layer
+symbol_layer=Bygningslag
 table=Tabell
-temperature=Temperature
-text_filter=Text filter
+temperature=Temperatur
+text_filter=Tekstfilter
 thematic_layer=Tematisk lag
-thematic_layer_1_legend=Thematic layer 1 legend
-thematic_layer_2_legend=Thematic layer 2 legend
-thematic_layer_3_legend=Thematic layer 3 legend
-thematic_layer_4_legend=Thematic layer 4 legend
+thematic_layer_1_legend=Termatisk lag 1 tegnforklaring
+thematic_layer_2_legend=Termatisk lag 2 tegnforklaring
+thematic_layer_3_legend=Termatisk lag 3 tegnforklaring
+thematic_layer_4_legend=Termatisk lag 4 tegnforklaring
 this_bimonth=Denne to-m\u00e5neden
 this_financial_year=Dette regnskaps\u00e5ret
 this_month=Denne m\u00e5neden
@@ -248,14 +248,14 @@ this_quarter=Dette kvartalet
 this_sixmonth=Dette halv\u00e5ret
 this_week=Denne uken
 this_year=Dette \u00e5ret
-time_since_last_data_update=Elapsed time since last data update
+time_since_last_data_update=Tid g\u00e5tt siden forrige dataoppdatering
 today=I dag
 totals=Totalsummer
 update=Oppdater
 username=Brukernavn
-user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
+user_is_not_assigned_to_any_organisation_units=Bruker er ikke tildelt noen organisasjonsenheter
 user_organisation_unit=Brukerorganisasjonsenhet
-user_ou=User OU
+user_ou=Bruker OU
 user_sub_units=Brukerunderenheter
 user_sub_x2_units=Brukerunder-x2-enheter
 value=Verdi
@@ -263,15 +263,15 @@ value_type=Verditype
 variance=Varians
 version=Versjon
 weekly=Ukentlig
-weekly_wednesday=Weekly (Start Wednesday)
-weekly_thursday=Weekly (Start Thursday)
-weekly_saturday=Weekly (Start Saturday)
-weekly_sunday=Weekly (Start Sunday)
+weekly_wednesday=Ukentlig (start onsdag)
+weekly_thursday=Ukentlig (start torsdag)
+weekly_saturday=Ukentlig (start l\u00f8rdag)
+weekly_sunday=Ukentlig (start s\u00f8ndag)
 write_interpretation=Skriv tolkning
-write_your_interpretation=Write your interpretation
+write_your_interpretation=Skriv din tolkning
 yearly=\u00c5rlig
 yes=Ja
 yesterday=I g\u00e5r
-you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
+you_can_not_select_organisation_units_below_the_selected_level=Du kan ikke velge organisasjonsenheter under det valgte niv\u00e5et
 you_do_not_have_access_to_all_items_in_this_favorite=Du har ikke tilgang til alle elementene i denne favoritten
 
