192b2b2 chore(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_nb.properties
+++ b/i18n/i18n_app_nb.properties
@@ -16,7 +16,7 @@ cancel=Avbryt
 can_edit_and_view=Kan redigere og se
 can_view=Kan se
 chart=Diagram
-classes_method=Classes / method
+classes_method=Klasser / metode
 clear=Fjern
 clear_map=T\u00f8m kart
 clustering=Gruppering
@@ -50,7 +50,7 @@ edit_layer=Rediger lag
 edit_legend=Rediger tegnforklaring
 email=E-post
 end_date=Sluttdato
-end_value_should_be_bigger_than_start_value=End value should be bigger than start value
+end_value_should_be_bigger_than_start_value=Sluttverdi skal v\u00e6re st\u00f8rre enn startverdi
 equal_counts=Likt antall
 equal_intervals=Like intervaller
 event_data_item=Hendelsesdatapunkt
@@ -81,7 +81,7 @@ group_nearby_events=Grupper n\u00e6rliggende hendelser
 groups=Grupper
 groupset=Gruppesett
 has_no_orgunits=har ingen organisasjonsenheter
-high_color_size=High color / size
+high_color_size=H\u00f8yfarge / st\u00f8rrelse
 highlight_color=Uthev farge
 high_size=H\u00f8y st\u00f8rrelse
 home=Hjem
@@ -113,7 +113,7 @@ last_year=I fjor
 latitude=Breddegrad
 layer=Lag
 layers=Lag
-layer_stack_transparency=Layer stack / opacity
+layer_stack_transparency=Lag stabel / gjennomsiktighet
 legend_name=Tegnforklaringsnavn
 legend_name_is_required=Tegnforklaringsnavn er p\u00e5krevd
 legends=Tegnforklaringer
@@ -125,7 +125,7 @@ legend_symbolizer=Symbolist
 legend_type=Tegnforklaringtype
 level=Niv\u00e5
 longitude=Lengdegrad
-low_color_size=Low color / size
+low_color_size=Lavfarge / st\u00f8rrelse
 low_size=Lav st\u00f8rrelse
 manage_favorites=Administrer favoritter
 map=Kart
@@ -163,7 +163,7 @@ organisation_unit_group_icons=Organisasjonsenhet gruppeikoner
 organisationunit_groupset=Organisasjonsenhetgruppesett
 organisation_units=Organisasjonsenheter
 organisationunit_search=Organisasjonsenhet s\u00f8k
-osm_light=OSM Light
+osm_light=OSM tynn
 overwrite=Overskriv 
 overwrite_favorite=Overskriv favoritten
 page=Side
