0a03113 chore(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_nb.properties
+++ b/i18n/i18n_app_nb.properties
@@ -223,7 +223,7 @@ sixmonthly=Halv\u00e5rlig
 sixmonthly_april=Halv\u00e5rig April
 stage=Fase
 start_date=Startdato
-start_end_dates=Start/slutt datoer
+start_end_dates=Start/slutt-datoer
 start_end_value=Start/slutt verdi
 stddev=Standardavvik
 steps=Trinn
