35652b9 chore(translations): sync translations from transifex (v29)

--- a/i18n/i18n_app_id.properties
+++ b/i18n/i18n_app_id.properties
@@ -53,10 +53,10 @@ end_date=Tanggal berakhir
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Equal counts
 equal_intervals=interval equal
-event_data_item=Event data item
+event_data_item=Data item pada even
 event_data_items=Item data event
 event_layer=Event layer
-event_location=Event location
+event_location=Lokasi even
 event_time=Event time
 external_layer=External layer
 external_layer_legend=External layer legend
