daaf298 fix(translations): sync translations from transifex (v29)

--- a/i18n/i18n_app_id.properties
+++ b/i18n/i18n_app_id.properties
@@ -226,7 +226,7 @@ start_date=Tanggal dimulai
 start_end_dates=Tanggal dimulai-berakhir
 start_end_value=Nilai awal/akhir
 stddev=Deviasi standar
-steps=Steps
+steps=langkah
 style=Gaya
 sub_units=Sub-units
 sub_x2_units=Sub-x2-units
