--- a/i18n/i18n_app_id.properties
+++ b/i18n/i18n_app_id.properties
@@ -53,10 +53,10 @@ end_date=Tanggal berakhir
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Equal counts
 equal_intervals=interval equal
-event_data_item=Event data item
+event_data_item=Data item pada even
 event_data_items=Item data event
 event_layer=Event layer
-event_location=Event location
+event_location=Lokasi even
 event_time=Event time
 external_layer=External layer
 external_layer_legend=External layer legend
@@ -164,7 +164,7 @@ organisationunit_groupset=Set grup unit organisasi
 organisation_units=Unit organisasi
 organisationunit_search=Pencarian unit organisasi
 osm_light=OSM Light
-overwrite=Overwrite
+overwrite=Timpa
 overwrite_favorite=Timpa favorit
 page=Halaman
 parent_unit=Parent unit
@@ -189,7 +189,7 @@ relative=Relative
 relocate=Pindahkan
 relocate_facility=Relocate facility
 remove=Hapus
-rename=Rename
+rename=Ganti nama
 reporting_rates=Tingkat pelaporan
 revision=Revisi
 search=Pencarian
@@ -226,7 +226,7 @@ start_date=Tanggal dimulai
 start_end_dates=Tanggal dimulai-berakhir
 start_end_value=Nilai awal/akhir
 stddev=Deviasi standar
-steps=Steps
+steps=langkah
 style=Gaya
 sub_units=Sub-units
 sub_x2_units=Sub-x2-units
@@ -242,7 +242,7 @@ thematic_layer_2_legend=Legenda layer tematik 2
 thematic_layer_3_legend=Thematic layer 3 legend
 thematic_layer_4_legend=Thematic layer 4 legend
 this_bimonth=2 bulan ini
-this_financial_year=This financial year
+this_financial_year=Tahun finansial ini
 this_month=Bulan ini
 this_quarter=Triwulan ini
 this_sixmonth=6 bulan ini
@@ -256,8 +256,8 @@ username=User name
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=User organisation unit
 user_ou=User OU
-user_sub_units=User sub-units
-user_sub_x2_units=User sub-x2-units
+user_sub_units=Subunit pengguna
+user_sub_x2_units=2x subunit pengguna
 value=Nilai
 value_type=Tipe nilai
 variance=Varian
