--- a/i18n/i18n_app_zh.properties
+++ b/i18n/i18n_app_zh.properties
@@ -1,11 +1,11 @@
 about=\u5173\u4e8e
-add_legend=Add legend
+add_legend=\u6dfb\u52a0\u56fe\u4f8b
 add_new=\u65b0\u52a0
 address=\u5730\u5740
 add_to_dashboard=\u6dfb\u52a0\u5230\u4eea\u8868\u76d8
 aggregation_type=\u6c47\u603b\u7c7b\u578b
 allow_external_access=\u5141\u8bb8\u5916\u90e8\u8bbf\u95ee
-and_or_lower_than=And/or lower than
+and_or_lower_than=\u548c/\u6216\u5c0f\u4e8e
 attribution=\u5c5e\u6027
 automatic=\u81ea\u52a8
 average=\u5e73\u5747
@@ -16,22 +16,22 @@ cancel=\u53d6\u6d88
 can_edit_and_view=\u53ef\u7f16\u8f91\u548c\u67e5\u770b
 can_view=\u53ef\u67e5\u770b
 chart=\u56fe\u8868
-classes_method=Classes / method
+classes_method=\u7c7b/\u65b9\u6cd5
 clear=\u6e05\u9664
-clear_map=Clear map
-clustering=Clustering
+clear_map=\u6e05\u9664\u5730\u56fe
+clustering=\u7fa4\u96c6
 code=\u4ee3\u7801
-color_scale=Color scale
+color_scale=\u8272\u9636
 coordinate_field=\u5750\u6807\u5b57\u6bb5
 coordinates=\u5750\u6807
-coordinates_could_not_be_loaded=Coordinates could not be loaded
+coordinates_could_not_be_loaded=\u5750\u6807\u4e0d\u80fd\u8f7d\u5165
 count=\u8ba1\u6570
 create=\u521b\u5efa
 created_by=\u521b\u5efa\u81ea
-current_legends=Current legends
+current_legends=\u5f53\u524d\u56fe\u4f8b
 daily=\u6bcf\u65e5
 data=\u6570\u636e
-data_and_periods=Data and periods
+data_and_periods=\u6570\u636e\u548c\u671f\u95f4
 dataelement=\u6570\u636e\u5143
 dataelement_group=\u6570\u636e\u5143\u7ec4
 dataset=\u6570\u636e\u96c6
@@ -39,59 +39,59 @@ delete=\u5220\u9664
 delete_favorite=\u5220\u9664\u504f\u597d
 details=\u8be6\u60c5
 download=\u4e0b\u8f7d
-download_map_as_png=Download map as PNG
+download_map_as_png=\u4e0b\u8f7d\u5730\u56fe\u4e3aPNG
 drill_down_one_level=\u4e0b\u94bb\u4e00\u7ea7
 drill_up_one_level=\u4e0a\u94bb\u4e00\u7ea7
 duplicate=\u91cd\u590d\u7684
-earthengine_layer=Google Earth Engine
-earth_engine_layer_legend=Google Earth Engine legend
-elevation=Elevation
+earthengine_layer=\u8c37\u6b4c\u5730\u56fe\u5f15\u64ce
+earth_engine_layer_legend=\u8c37\u6b4c\u5730\u56fe\u5f15\u64ce\u56fe\u4f8b
+elevation=\u9ad8\u7a0b
 edit_layer=\u7f16\u8f91\u56fe\u5c42
-edit_legend=Edit legend
+edit_legend=\u7f16\u8f91\u56fe\u4f8b
 email=\u90ae\u4ef6
 end_date=\u7ed3\u675f\u65e5\u671f
-end_value_should_be_bigger_than_start_value=End value should be bigger than start value
-equal_counts=Equal counts
+end_value_should_be_bigger_than_start_value=\u7ed3\u675f\u503c\u5e94\u8be5\u9ad8\u4e8e\u5f00\u59cb\u503c
+equal_counts=\u7b49\u6570\u91cf
 equal_intervals=\u5e73\u7b49\u95f4\u9694
 event_data_item=\u4e8b\u4ef6\u6570\u636e\u6761\u76ee
 event_data_items=\u4e8b\u4ef6\u6570\u636e\u9879
-event_layer=Event layer
+event_layer=\u4e8b\u4ef6\u56fe\u5c42
 event_location=\u4e8b\u4ef6\u4f4d\u7f6e
 event_time=\u4e8b\u4ef6\u65f6\u95f4
-external_layer=External layer
-external_layer_legend=External layer legend
+external_layer=\u5916\u90e8\u56fe\u5c42
+external_layer_legend=\u5916\u90e8\u56fe\u5c42\u56fe\u4f8b
 facility_layer=\u673a\u6784\u5c42
-facility_layer_export_currently_not_supported=Facility layer export currently not supported
-facility_layer_legend=Facility layer legend
-favorite_name=Favorite name
-favorite_outdated_create_new=Favorite is outdated - please create a new one
+facility_layer_export_currently_not_supported=\u673a\u6784\u56fe\u5c42\u5bfc\u51fa\u5f53\u524d\u4e0d\u652f\u6301
+facility_layer_legend=\u673a\u6784\u56fe\u5c42\u56fe\u4f8b
+favorite_name=\u6536\u85cf\u540d\u79f0
+favorite_outdated_create_new=\u6536\u85cf\u8fc7\u671f\uff0c\u8bf7\u521b\u5efa\u4e00\u4e2a\u65b0\u7684
 favorites=\u6536\u85cf\u5939
 filter=\u7b5b\u9009
-filter_by_value=Filter by value
+filter_by_value=\u6309\u503c\u8fc7\u6ee4
 financial_april=\u8d22\u52a1\u56db\u6708
 financial_july=\u8d22\u52a1\u4e03\u6708
 financial_oct=\u8d22\u52a1\u5341\u6708
-google_hybrid=Google Hybrid
-google_streets=Google Streets
+google_hybrid=\u8c37\u6b4c\u6742\u5408
+google_streets=\u8c37\u6b4c\u8857\u9053
 go_to_charts=\u8fdb\u5230\u56fe\u8868
 go_to_pivot_tables=\u8fdb\u5230\u900f\u89c6\u8868
 greater_than=\u5927\u4e8e
 group=\u7ec4
-group_nearby_events=Group nearby events
+group_nearby_events=\u9644\u4ef6\u4e8b\u4ef6\u5206\u7ec4
 groups=\u7ec4
 groupset=\u7ec4\u96c6
 has_no_orgunits=\u6ca1\u6709\u7ec4\u7ec7\u673a\u6784
-high_color_size=High color / size
+high_color_size=\u9ad8\u9650\u989c\u8272\u6216\u5927\u5c0f
 highlight_color=\u9ad8\u4eae\u8272\u5f69
 high_size= \u4e0a\u9650
 home=\u9996\u9875
 indicator=\u6307\u6807
 indicator_group=\u6307\u6807\u7ec4
-information=Information
+information=\u4fe1\u606f
 infrastructural_data=\u57fa\u7840\u6570\u636e
-invalid_parameter=Invalid parameter
+invalid_parameter=\u65e0\u6548\u7684\u53c2\u6570
 item_type=\u6761\u76ee\u7c7b\u578b
-landcover=Landcover
+landcover=\u9646\u5730\u8986\u76d6
 last_2_sixmonths=\u6700\u8fd1\u4e24\u4e2a\u516d\u4e2a\u6708
 last_3_months=\u6700\u8fd13\u4e2a\u6708
 last_4_quarters=\u6700\u8fd1\u56db\u5b63\u5ea6
@@ -113,53 +113,53 @@ last_year=\u53bb\u5e74
 latitude=\u7eac\u5ea6
 layer=\u56fe\u5c42
 layers=\u56fe\u5c42
-layer_stack_transparency=Layer stack / opacity
-legend_name=Legend name
-legend_name_is_required=Legend name is required
+layer_stack_transparency=\u56fe\u5c42\u5806\u53e0\u548c\u900f\u660e\u5ea6
+legend_name=\u56fe\u4f8b\u540d\u79f0
+legend_name_is_required=\u56fe\u4f8b\u540d\u79f0\u5fc5\u987b
 legends=\u56fe\u4f8b
 legendset=\u56fe\u4f8b\u96c6
-legend_sets_available=legend sets available
-legend_set_name=Legend set name
-legendsets=Legend sets
+legend_sets_available=\u53ef\u7528\u56fe\u4f8b\u96c6
+legend_set_name=\u56fe\u4f8b\u96c6\u540d\u79f0
+legendsets=\u56fe\u4f8b\u96c6
 legend_symbolizer=\u7b26\u53f7
 legend_type=\u56fe\u4f8b\u7c7b\u578b
 level=\u7b49\u7ea7
 longitude=\u7ecf\u5ea6
-low_color_size=Low color / size
+low_color_size=\u5e95\u9650\u989c\u8272\u6216\u5927\u5c0f
 low_size=\u4e0b\u9650
 manage_favorites=\u7ba1\u7406\u559c\u597d
 map=\u5730\u56fe
 max=\u6700\u5927\u503c
 min=\u6700\u5c0f
 min_max_c=Min/max \u00c2\u00b0C
-min_max_elevation=Min/max elevation
-min_max_people=Min/max people
-min_max_rainfall=Min/max rainfall
-min_max_value=Min/max value
+min_max_elevation=\u6700\u5927\u6700\u5c0f\u6d77\u62d4
+min_max_people=\u6700\u5927\u6700\u5c0f\u4eba\u6570
+min_max_rainfall=\u6700\u5927\u6700\u5c0f\u964d\u96e8\u91cf
+min_max_value=\u6700\u5927\u6700\u5c0f\u503c
 monthly=\u6bcf\u6708
 name=\u540d\u79f0
 next=\u4e0b\u4e00\u4e2a
-nighttime_lights=Nighttime lights
+nighttime_lights=\u591c\u95f4\u706f\u5149
 no=\u5426
-no_groupset_selected=No group set selected
-no_map_to_save=No map to save
+no_groupset_selected=\u6ca1\u6709\u9009\u62e9\u7ec4\u96c6
+no_map_to_save=\u65e0\u5730\u56fe\u4fdd\u5b58
 none=\u65e0
-no_event_coordinates_found=No event coordinates found
-no_organisation_unit_levels=No organisation unit levels
-no_organisation_units_specified=No organisation units specified
+no_event_coordinates_found=\u6ca1\u6709\u53d1\u73b0\u4e8b\u4ef6\u5750\u6807
+no_organisation_unit_levels=\u6ca1\u6709\u673a\u6784\u7b49\u7ea7
+no_organisation_units_specified=\u6ca1\u6709\u6307\u5b9a\u673a\u6784
 no_period_selected=\u6ca1\u6709\u9009\u62e9\u671f\u95f4
-no_program_stage_selected=No program stage selected
-no_selected_items=No selected items
-no_system_info_found=No system info found
-no_valid_coordinates_found=No valid coordinates found
+no_program_stage_selected=\u6ca1\u6709\u9009\u62e9\u9879\u76ee\u9636\u6bb5
+no_selected_items=\u6ca1\u6709\u9009\u62e9\u6761\u76ee
+no_system_info_found=\u6ca1\u6709\u53d1\u73b0\u7cfb\u7edf\u4fe1\u606f
+no_valid_coordinates_found=\u65e0\u6709\u6548\u7684\u5750\u6807
 open_last_chart=\u6253\u5f00\u4e0a\u4e2a\u56fe\u8868
 open_last_table=\u6253\u5f00\u540e\u4e00\u4e2a\u900f\u89c6\u8868
 openstreetmap=OpenStreetMap
-open_this_map_as_chart=Open this map as chart
-open_this_map_as_table=Open this map as table
+open_this_map_as_chart=\u6253\u5f00\u5730\u56fe\u4e3a \u56fe\u8868
+open_this_map_as_table=\u6253\u5f00\u5730\u56fe\u4e3a\u8868\u683c
 options=\u9009\u9879
 organisation_unit=\u673a\u6784
-organisation_unit_group_icons=Organisation unit group icons
+organisation_unit_group_icons=\u673a\u6784\u7ec4\u56fe\u6807
 organisationunit_groupset=\u7ec4\u7ec7\u673a\u6784\u7ec4\u96c6
 organisation_units=\u7ec4\u7ec7\u673a\u6784
 organisationunit_search=\u7ec4\u7ec7\u673a\u6784\u641c\u7d22
@@ -172,13 +172,13 @@ period=\u5468\u671f
 period_type=\u5468\u671f\u7c7b\u578b
 phone_number=\u7535\u8bdd\u53f7\u7801
 placement=\u4f4d\u7f6e
-please_create_map_first=Please create a map first
+please_create_map_first=\u8bf7\u5148\u521b\u5efa\u5730\u56fe
 please_enter_a_name=\u8bf7\u8f93\u5165\u4e00\u4e2a\u540d\u79f0
 please_enter_map_title=\u8bf7\u8f93\u5165\u4e00\u4e2a\u5730\u56fe\u6807\u9898
-point_color=Point color
+point_color=\u70b9\u989c\u8272
 point_radius=\u70b9\u534a\u5f84
-population_density=Population density
-precipitation=Precipitation
+population_density=\u4eba\u53e3\u5bc6\u5ea6
+precipitation=\u964d\u6c34
 predefined=\u5df2\u9884\u5b9a\u4e49
 previous=\u524d\u4e00
 program=\u9879\u76ee
@@ -187,7 +187,7 @@ public_access=\u516c\u5f00\u8bbf\u95ee
 quarterly=\u5b63\u5ea6
 relative=\u5173\u7cfb
 relocate=\u91cd\u65b0\u5b9a\u4f4d
-relocate_facility=Relocate facility
+relocate_facility=\u673a\u6784\u91cd\u5b9a\u4f4d
 remove=\u79fb\u9664
 rename=\u91cd\u547d\u540d
 reporting_rates=\u4e0a\u62a5\u7387
@@ -198,25 +198,25 @@ search_for_user_groups=\u641c\u7d22\u7528\u6237\u7ec4
 select=\u9009\u62e9
 select_groups=\u9009\u62e9\u7ec4
 selection_mode=\u9009\u62e9\u6a21\u5f0f
-select_dataset=Select dataset
-select_layer=Select layer
-select_layer_from_google_earth_engine=Select layer from Google Earth Engine
+select_dataset=\u9009\u62e9\u6570\u636e\u96c6
+select_layer=\u9009\u62e9\u56fe\u5c42
+select_layer_from_google_earth_engine=\u4ece\u8c37\u6b4c\u5730\u56fe\u9009\u62e9\u56fe\u5c42
 select_levels=\u9009\u62e9\u7b49\u7ea7
 select_organisation_unit_groups=\u9009\u62e9\u673a\u6784\u7ec4
 select_organisation_unit_levels=\u9009\u62e9\u673a\u6784\u7b49\u7ea7
 select_organisation_units=\u9009\u62e9\u673a\u6784
 select_period=\u9009\u62e9\u5468\u671f
 select_program=\u9009\u62e9\u9879\u76ee
-select_service=Select service
-select_stage=Select stage
+select_service=\u9009\u62e9\u670d\u52a1
+select_stage=\u9009\u62e9\u9636\u6bb5
 select_sub_units=\u9009\u62e9\u4e0b\u5c5e\u673a\u6784
-select_year=Select year
-service_url=Service URL
+select_year=\u9009\u62e9\u5e74\u4efd
+service_url=\u670d\u52a1\u5730\u5740
 share=\u5206\u4eab
-share_with_other_people=Share with others
+share_with_other_people=\u4ed6\u4eba\u5206\u4eab
 sharing_settings=\u5171\u4eab\u8bbe\u7f6e
 show=\u663e\u793a
-show_circular_area=Show circular area with radius (m)
+show_circular_area=\u663e\u793a\u534a\u5f84\u7684\u5706\u5f62\u9762\u79ef
 show_information_sheet=\u663e\u793a\u4fe1\u606f\u8868\u683c
 show_lon_lat=\u663e\u793a\u7ecf\u7eac\u5ea6
 sixmonthly=\u516d\u4e2a\u6708
@@ -224,23 +224,23 @@ sixmonthly_april=\u534a\u5e74\u7684\u56db\u6708
 stage=\u9636\u6bb5
 start_date=\u5f00\u59cb\u65e5\u671f
 start_end_dates=\u5f00\u59cb-\u7ed3\u675f\u65e5\u671f
-start_end_value=Start/end value
+start_end_value=\u8d77\u59cb\u503c
 stddev=\u6807\u51c6\u5dee
 steps=\u6b65
 style=\u98ce\u683c
-sub_units=Sub-units
-sub_x2_units=Sub-x2-units
+sub_units=\u4e0b\u5c5e\u673a\u6784
+sub_x2_units=\u4e8c\u7ea7\u4e0b\u5c5e\u673a\u6784
 sum=\u6c42\u548c
 swap_lon_lat=\u5207\u6362\u7ecf\u7eac\u5ea6
 symbol_layer=\u7b26\u53f7\u5c42
 table=\u8868
-temperature=Temperature
+temperature=\u6e29\u5ea6
 text_filter=\u6587\u672c\u8fc7\u6ee4
 thematic_layer=\u4e13\u9898\u5c42
-thematic_layer_1_legend=Thematic layer 1 legend
-thematic_layer_2_legend=Thematic layer 2 legend
-thematic_layer_3_legend=Thematic layer 3 legend
-thematic_layer_4_legend=Thematic layer 4 legend
+thematic_layer_1_legend=\u4e13\u9898\u56fe\u5c421\u56fe\u4f8b
+thematic_layer_2_legend=\u4e13\u9898\u56fe\u5c422\u56fe\u4f8b
+thematic_layer_3_legend=\u4e13\u9898\u56fe\u5c423\u56fe\u4f8b
+thematic_layer_4_legend=\u4e13\u9898\u56fe\u5c424\u56fe\u4f8b
 this_bimonth=\u672c\u4e24\u6708
 this_financial_year=\u672c\u8d22\u653f\u5e74
 this_month=\u672c\u6708
@@ -248,14 +248,14 @@ this_quarter=\u672c\u5b63
 this_sixmonth=\u672c\u534a\u5e74
 this_week=\u672c\u5468
 this_year=\u4eca\u5e74
-time_since_last_data_update=Elapsed time since last data update
+time_since_last_data_update=\u6570\u636e\u4e0a\u6b21\u66f4\u65b0\u540e\u7ecf\u8fc7\u7684\u65f6\u95f4
 today=\u4eca\u5929
 totals=\u603b\u5171
 update=\u66f4\u65b0
 username=\u7528\u6237\u540d
-user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
+user_is_not_assigned_to_any_organisation_units=\u7528\u6237\u6ca1\u6709\u6307\u6d3e\u5230\u4efb\u4f55\u673a\u6784
 user_organisation_unit=\u7528\u6237\u6240\u5728\u673a\u6784
-user_ou=User OU
+user_ou=\u7528\u6237\u673a\u6784
 user_sub_units=\u4e0b\u5c5e\u673a\u6784
 user_sub_x2_units=\u4e8c\u7ea7\u4e0b\u5c5e\u673a\u6784
 value=\u503c
@@ -263,15 +263,15 @@ value_type=\u503c\u7c7b\u578b
 variance=\u65b9\u5dee
 version=\u7248\u672c
 weekly=\u6bcf\u5468
-weekly_wednesday=Weekly (Start Wednesday)
-weekly_thursday=Weekly (Start Thursday)
-weekly_saturday=Weekly (Start Saturday)
-weekly_sunday=Weekly (Start Sunday)
+weekly_wednesday=\u6bcf\u5468\uff08\u59cb\u4e8e\u5468\u4e8c\uff09
+weekly_thursday=\u6bcf\u5468\uff08\u59cb\u4e8e\u5468\u56db\uff09
+weekly_saturday=\u6bcf\u5468\uff08\u59cb\u4e8e\u5468\u516d\uff09
+weekly_sunday=\u6bcf\u5468\uff08\u59cb\u4e8e\u5468\u65e5\uff09
 write_interpretation=\u4e66\u5199\u6ce8\u89e3
-write_your_interpretation=Write your interpretation
+write_your_interpretation=\u4e66\u5199\u4f60\u7684\u6ce8\u91ca
 yearly=\u6bcf\u5e74
 yes=\u662f
 yesterday=\u6628\u5929
-you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
+you_can_not_select_organisation_units_below_the_selected_level=\u4f60\u4e0d\u80fd\u9009\u62e9\u4f4e\u4e8e\u9009\u62e9\u7b49\u7ea7\u7684\u673a\u6784
 you_do_not_have_access_to_all_items_in_this_favorite=\u4f60\u6ca1\u6709\u8bbf\u95ee\u6240\u6709\u6536\u85cf\u7684\u6743\u9650
 
