0c5ed12 fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_pt.properties
+++ b/i18n/i18n_app_pt.properties
@@ -22,7 +22,7 @@ clear_map=Limpar mapa
 clustering=Clustering
 code=C\u00f3digo
 color_scale=Escala da cor
-coordinate_field=Coordinate field
+coordinate_field=Campo de coordenadas
 coordinates=Coordenadas
 coordinates_could_not_be_loaded=N\u00e3o foi poss\u00edvel carregar as coordenadas
 count=Contagem
@@ -56,8 +56,8 @@ equal_intervals=Intervalos iguais
 event_data_item=Item de dados do evento
 event_data_items=Itens de dados do evento
 event_layer=Camada de eventos
-event_location=Event location
-event_time=Event time
+event_location=Localiza\u00e7\u00e3o do evento 
+event_time=Hora do evento
 external_layer=Camada externa
 external_layer_legend=Legenda da camada externa
 facility_layer=Camada de US
@@ -90,7 +90,7 @@ indicator_group=Grupo do indicador
 information=Informa\u00e7\u00e3o
 infrastructural_data=Dados de infra-estrutura
 invalid_parameter=Par\u00e2metro inv\u00e1lido
-item_type=Item type
+item_type=Tipo de item
 landcover=Cobertura da terra
 last_2_sixmonths=Dois \u00faltimos seis-meses
 last_3_months=\u00daltimos tr\u00eas meses
@@ -176,7 +176,7 @@ please_create_map_first=Por favor crie um mapa primeiro
 please_enter_a_name=Por favor insira um nome
 please_enter_map_title=Digite um t\u00edtulo do mapa
 point_color=Point color
-point_radius=Point radius
+point_radius=Raio do ponto
 population_density=Densidade populacional
 precipitation=Precipita\u00e7\u00e3o
 predefined=Predefinido
