8f23b79 fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_zh.properties
+++ b/i18n/i18n_app_zh.properties
@@ -163,7 +163,7 @@ organisation_unit_group_icons=\u673a\u6784\u7ec4\u56fe\u6807
 organisationunit_groupset=\u7ec4\u7ec7\u673a\u6784\u7ec4\u96c6
 organisation_units=\u7ec4\u7ec7\u673a\u6784
 organisationunit_search=\u7ec4\u7ec7\u673a\u6784\u641c\u7d22
-osm_light=OSM Light
+osm_light=OSM\u8f7b\u91cf
 overwrite=\u8986\u76d6
 overwrite_favorite=\u8986\u76d6\u504f\u597d
 page=\u9875
