--- a/i18n/i18n_app_uz_Cyrl.properties
+++ b/i18n/i18n_app_uz_Cyrl.properties
@@ -42,7 +42,7 @@ download=\u042e\u043a\u043b\u0430\u0448
 download_map_as_png=Download map as PNG
 drill_down_one_level=Drill down one level
 drill_up_one_level=Drill up one level
-duplicate=Duplicate
+duplicate=\u0414\u0443\u0431\u043b\u0438\u043a\u0430\u0442
 earthengine_layer=Google Earth Engine
 earth_engine_layer_legend=Google Earth Engine legend
 elevation=Elevation
@@ -54,7 +54,7 @@ end_value_should_be_bigger_than_start_value=End value should be bigger than star
 equal_counts=Equal counts
 equal_intervals=Equal intervals
 event_data_item=Event data item
-event_data_items=Event data items
+event_data_items=\u04b2\u043e\u0434\u0438\u0441\u0430\u043b\u0430\u0440 \u04b3\u0430\u049b\u0438\u0434\u0430 \u043c\u0430\u044a\u043b\u0443\u043c\u043e\u0442 \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u043b\u0430\u0440\u0438
 event_layer=Event layer
 event_location=Event location
 event_time=Event time
@@ -76,7 +76,7 @@ google_streets=Google Streets
 go_to_charts=\u0413\u0440\u0430\u0444\u0438\u043a\u0430\u0433\u0430 \u045e\u0442\u0438\u0448
 go_to_pivot_tables=Go to pivot tables
 greater_than=Greater than
-group=Group
+group=\u0413\u0443\u0440\u0443\u04b3
 group_nearby_events=Group nearby events
 groups=Groups
 groupset=Group set
@@ -110,7 +110,7 @@ last_sixmonth=\u041e\u0445\u0438\u0440\u0433\u0438 6 \u043e\u0439
 last_week=\u041e\u0445\u0438\u0440\u0433\u0438 \u04b3\u0430\u0444\u0442\u0430
 last_5_years=\u041e\u0445\u0438\u0440\u0433\u0438 5 \u0439\u0438\u043b
 last_year=\u041e\u0445\u0438\u0440\u0433\u0438 \u0439\u0438\u043b
-latitude=Latitude
+latitude=\u041a\u0435\u043d\u0433\u043b\u0438\u043a
 layer=Layer
 layers=Layers
 layer_stack_transparency=Layer stack / opacity
@@ -124,7 +124,7 @@ legendsets=Legend sets
 legend_symbolizer=Symbolizer
 legend_type=Legend type
 level=Level
-longitude=Longitude
+longitude=\u041a\u0435\u043d\u0433\u043b\u0438\u043a
 low_color_size=Low color / size
 low_size=Low size
 manage_favorites=\u0442\u0430\u043d\u043b\u0430\u043d\u0433\u0430\u043d\u043b\u0430\u0440\u043d\u0438 \u0431\u043e\u0448\u049b\u0430\u0440\u0438\u0448
@@ -182,7 +182,7 @@ precipitation=Precipitation
 predefined=Predefined
 previous=Previous
 program=\u041f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u0430
-program_indicators=Program indicators
+program_indicators=\u0414\u0430\u0441\u0442\u0443\u0440 \u043a\u045e\u0440\u0441\u0430\u0442\u0433\u0438\u0447\u043b\u0430\u0440\u0438
 public_access=\u041e\u043c\u043c\u0430\u0432\u0438\u0439 \u0444\u043e\u0439\u0434\u0430\u043b\u0430\u043d\u0438\u0448
 quarterly=\u04b2\u0430\u0440 \u043a\u0432\u0430\u0440\u0442\u0430\u043b
 relative=Relative
@@ -191,11 +191,11 @@ relocate_facility=Relocate facility
 remove=\u040e\u0447\u0438\u0440\u0438\u0448
 rename=\u049a\u0430\u0439\u0442\u0430 \u043d\u043e\u043c\u043b\u0430\u0448
 reporting_rates=\u04b2\u0438\u0441\u043e\u0431\u043e\u0442 \u0442\u0430\u044a\u0440\u0438\u0444\u043b\u0430\u0440\u0438
-revision=Revision
+revision=\u049a\u0430\u0439\u0442\u0430 \u043a\u045e\u0440\u0438\u0431 \u0447\u0438\u049b\u0438\u0448
 search=\u0418\u0437\u043b\u0430\u0448
 search_for_favorites=\u0422\u0430\u043d\u043b\u0430\u043d\u0433\u0430\u043d\u043b\u0430\u0440\u043d\u0438 \u0438\u0437\u043b\u0430\u0448
 search_for_user_groups=Search for user groups
-select=Select
+select=\u0422\u0430\u043d\u043b\u0430\u043d\u0433
 select_groups=Select groups
 selection_mode=Selection mode
 select_dataset=Select dataset
@@ -206,7 +206,7 @@ select_organisation_unit_groups=\u0422\u0430\u0448\u043a\u0438\u043b\u0438\u0439
 select_organisation_unit_levels=\u0422\u0430\u0448\u043a\u0438\u043b\u0438\u0439 \u0431\u045e\u043b\u0438\u043c\u043b\u0430\u0440 \u0434\u0430\u0440\u0430\u0436\u0430\u043b\u0430\u0440\u0438\u043d\u0438 \u0442\u0430\u043d\u043b\u0430\u043d\u0433
 select_organisation_units=\u0422\u0430\u0448\u043a\u0438\u043b\u0438\u0439 \u0431\u045e\u043b\u0438\u043c\u043b\u0430\u0440\u043d\u0438 \u0442\u0430\u043d\u043b\u0430\u043d\u0433
 select_period=Select period
-select_program=Select program
+select_program=\u0414\u0430\u0441\u0442\u0443\u0440\u043d\u0438 \u0442\u0430\u043d\u043b\u0430\u0448
 select_service=Select service
 select_stage=Select stage
 select_sub_units=\u0411\u045e\u043b\u0438\u043c \u043e\u0441\u0442\u0438 \u0431\u0438\u0440\u043b\u0438\u0433\u0438\u043d\u0438 \u0442\u0430\u043d\u043b\u0430\u043d\u0433
@@ -249,7 +249,7 @@ this_sixmonth=\u0423\u0448\u0431\u0443 \u044f\u0440\u0438\u043c \u0439\u0438\u04
 this_week=\u0423\u0448\u0431\u0443 \u04b3\u0430\u0444\u0442\u0430
 this_year=\u0423\u0448\u0431\u0443 \u0439\u0438\u043b
 time_since_last_data_update=Elapsed time since last data update
-today=Today
+today=\u0431\u0443\u0433\u0443\u043d
 totals=\u0416\u0430\u043c\u0438
 update=\u042f\u043d\u0433\u0438\u043b\u0430\u0448
 username=\u0424\u043e\u0439\u0434\u0430\u043b\u0430\u043d\u0443\u0432\u0447\u0438 \u0438\u0441\u043c\u0438
@@ -261,13 +261,13 @@ user_sub_x2_units=\u0424\u043e\u0439\u0434\u0430\u043b\u0430\u043d\u0443\u0432\u
 value=\u049a\u0438\u0439\u043c\u0430\u0442
 value_type=\u049a\u0438\u0439\u043c\u0430\u0442 \u0442\u0443\u0440\u0438
 variance=\u041d\u043e\u043c\u0443\u0432\u043e\u0444\u0438\u049b\u043b\u0438\u043a
-version=Version
+version=\u0412\u0430\u0440\u0438\u0430\u043d\u0442
 weekly=\u04b2\u0430\u0444\u0442\u0430\u043b\u0438\u043a
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
 weekly_saturday=Weekly (Start Saturday)
 weekly_sunday=Weekly (Start Sunday)
-write_interpretation=Write interpretation
+write_interpretation=\u0428\u0430\u0440\u04b3 \u0451\u0437\u0438\u0448
 write_your_interpretation=Write your interpretation
 yearly=\u0419\u0438\u043b\u043b\u0438\u043a
 yes=\u04b2\u0430
