--- a/i18n/i18n_app_uz_Cyrl.properties
+++ b/i18n/i18n_app_uz_Cyrl.properties
@@ -123,7 +123,7 @@ legend_set_name=Legend set name
 legendsets=Legend sets
 legend_symbolizer=Symbolizer
 legend_type=Legend type
-level=Level
+level=\u0414\u0430\u0440\u0430\u0436\u0430
 longitude=\u041a\u0435\u043d\u0433\u043b\u0438\u043a
 low_color_size=Low color / size
 low_size=Low size
@@ -158,10 +158,10 @@ openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
 options=\u0412\u0430\u0440\u0438\u0430\u043d\u0442
-organisation_unit=\u0422\u0430\u0448\u043a\u0438\u043b\u0438\u0439 \u0431\u0438\u0440\u043b\u0438\u043a
+organisation_unit=\u0422\u0430\u0448\u043a\u0438\u043b\u0438\u0439 \u0431\u045e\u043b\u0438\u043c
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisation unit group set
-organisation_units=\u0422\u0430\u0448\u043a\u0438\u043b\u0438\u0439 \u0431\u0438\u0440\u043b\u0438\u043a\u043b\u0430\u0440
+organisation_units=\u0422\u0430\u0448\u043a\u0438\u043b\u0438\u0439 \u0431\u045e\u043b\u0438\u043c\u043b\u0430\u0440
 organisationunit_search=Organisation unit search
 osm_light=OSM Light
 overwrite=\u049a\u0430\u0439\u0442\u0430 \u0451\u0437\u0438\u0448
@@ -254,7 +254,7 @@ totals=\u0416\u0430\u043c\u0438
 update=\u042f\u043d\u0433\u0438\u043b\u0430\u0448
 username=\u0424\u043e\u0439\u0434\u0430\u043b\u0430\u043d\u0443\u0432\u0447\u0438 \u0438\u0441\u043c\u0438
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
-user_organisation_unit=User organisation unit
+user_organisation_unit=\u0422\u0430\u0448\u043a\u0438\u043b\u0438\u0439 \u0431\u045e\u043b\u0438\u043c \u0444\u043e\u0439\u0434\u0430\u043b\u0430\u043d\u0443\u0432\u0447\u0438\u0441\u0438
 user_ou=User OU
 user_sub_units=\u0424\u043e\u0439\u0434\u0430\u043b\u0430\u043d\u0443\u0432\u0447\u0438\u0433\u0430 \u0431\u045e\u0439\u0441\u0443\u043d\u0443\u0432\u0447\u0438 \u0431\u0438\u0440\u043b\u0438\u043a\u043b\u0430\u0440
 user_sub_x2_units=\u0424\u043e\u0439\u0434\u0430\u043b\u0430\u043d\u0443\u0432\u0447\u0438\u0433\u0430 \u0431\u045e\u0439\u0441\u0443\u043d\u0443\u0432\u0447\u0438 2 \u0434\u0430\u0440\u0430\u0436\u0430\u043b\u0438 \u0431\u0438\u0440\u043b\u0438\u043a\u043b\u0430\u0440
