9b81ef0 fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_uz_Cyrl.properties
+++ b/i18n/i18n_app_uz_Cyrl.properties
@@ -17,7 +17,7 @@ can_edit_and_view=\u0422\u0430\u04b3\u0440\u0438\u0440\u043b\u0430\u0448 \u0432\
 can_view=\u041a\u045e\u0440\u0438\u0448 \u043c\u0443\u043c\u043a\u0438\u043d
 chart=\u0414\u0438\u0430\u0433\u0440\u0430\u043c\u043c\u0430
 classes_method=Classes / method
-clear=Clear
+clear=\u0410\u043d\u0438\u049b
 clear_map=Clear map
 clustering=Clustering
 code=\u041a\u043e\u0434
@@ -49,7 +49,7 @@ elevation=Elevation
 edit_layer=Edit layer
 edit_legend=Edit legend
 email=Email
-end_date=End date
+end_date=\u042f\u043a\u0443\u043d\u043b\u0430\u043d\u0438\u0448 \u0441\u0430\u043d\u0430\u0441\u0438
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Equal counts
 equal_intervals=Equal intervals
@@ -75,7 +75,7 @@ google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=\u0413\u0440\u0430\u0444\u0438\u043a\u0430\u0433\u0430 \u045e\u0442\u0438\u0448
 go_to_pivot_tables=Go to pivot tables
-greater_than=Greater than
+greater_than=\u0423\u043d\u0434\u0430\u043d \u043a\u0430\u0442\u0442\u0430\u0440\u043e\u049b
 group=\u0413\u0443\u0440\u0443\u04b3
 group_nearby_events=Group nearby events
 groups=Groups
@@ -166,7 +166,7 @@ organisationunit_search=Organisation unit search
 osm_light=OSM Light
 overwrite=\u049a\u0430\u0439\u0442\u0430 \u0451\u0437\u0438\u0448
 overwrite_favorite=\u0422\u0430\u043d\u043b\u0430\u043d\u0433\u0430\u043d\u043b\u0430\u0440\u043d\u0438 \u049b\u0430\u0439\u0442\u0430 \u0451\u0437\u0438\u0448
-page=Page
+page=\u0421\u0430\u04b3\u0438\u0444\u0430
 parent_unit=Parent unit
 period=Period
 period_type=Period type
@@ -180,7 +180,7 @@ point_radius=Point radius
 population_density=Population density
 precipitation=Precipitation
 predefined=Predefined
-previous=Previous
+previous=\u041e\u043b\u0434\u0438\u043d\u0433\u0438
 program=\u041f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u0430
 program_indicators=\u0414\u0430\u0441\u0442\u0443\u0440 \u043a\u045e\u0440\u0441\u0430\u0442\u0433\u0438\u0447\u043b\u0430\u0440\u0438
 public_access=\u041e\u043c\u043c\u0430\u0432\u0438\u0439 \u0444\u043e\u0439\u0434\u0430\u043b\u0430\u043d\u0438\u0448
@@ -222,7 +222,7 @@ show_lon_lat=Show longitude/latitude
 sixmonthly=\u042f\u0440\u0438\u043c \u0439\u0438\u043b\u043b\u0438\u043a
 sixmonthly_april=\u042f\u0440\u0438\u043c \u0439\u0438\u043b\u043b\u0438\u043a \u0410\u043f\u0440\u0435\u043b\u044c
 stage=Stage
-start_date=Start date
+start_date=\u0411\u043e\u0448\u043b\u0430\u043d\u0438\u0448 \u0441\u0430\u043d\u0430\u0441\u0438
 start_end_dates=Start/end dates
 start_end_value=Start/end value
 stddev=\u0421\u0442\u0430\u043d\u0434\u0430\u0440\u0442 \u043e\u0493\u0438\u0448
