cf734df fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_uz_Cyrl.properties
+++ b/i18n/i18n_app_uz_Cyrl.properties
@@ -85,7 +85,7 @@ high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
 home=\u0423\u0439
-indicator=Indicator
+indicator=\u0418\u043d\u0434\u0438\u043a\u0430\u0442\u043e\u0440
 indicator_group=Indicator group
 information=Information
 infrastructural_data=Infrastructural data
@@ -153,7 +153,7 @@ no_selected_items=No selected items
 no_system_info_found=No system info found
 no_valid_coordinates_found=No valid coordinates found
 open_last_chart=\u041e\u0445\u0438\u0440\u0433\u0438 \u0434\u0438\u0430\u0433\u0440\u0430\u043c\u043c\u0430\u043d\u0438 \u043e\u0447\u0438\u0448
-open_last_table=Open last table
+open_last_table=\u041e\u0445\u0438\u0440\u0433\u0438 \u0436\u0430\u0434\u0432\u0430\u043b\u043d\u0438 \u043e\u0447\u0438\u0448
 openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
@@ -168,7 +168,7 @@ overwrite=\u049a\u0430\u0439\u0442\u0430 \u0451\u0437\u0438\u0448
 overwrite_favorite=\u0422\u0430\u043d\u043b\u0430\u043d\u0433\u0430\u043d\u043b\u0430\u0440\u043d\u0438 \u049b\u0430\u0439\u0442\u0430 \u0451\u0437\u0438\u0448
 page=\u0421\u0430\u04b3\u0438\u0444\u0430
 parent_unit=Parent unit
-period=Period
+period=\u0434\u0430\u0432\u0440
 period_type=Period type
 phone_number=\u0422\u0435\u043b\u0435\u0444\u043e\u043d \u0440\u0430\u049b\u0430\u043c\u0438
 placement=Placement
@@ -221,7 +221,7 @@ show_information_sheet=Show information
 show_lon_lat=Show longitude/latitude
 sixmonthly=\u042f\u0440\u0438\u043c \u0439\u0438\u043b\u043b\u0438\u043a
 sixmonthly_april=\u042f\u0440\u0438\u043c \u0439\u0438\u043b\u043b\u0438\u043a \u0410\u043f\u0440\u0435\u043b\u044c
-stage=Stage
+stage=\u0411\u043e\u0441\u049b\u0438\u0447
 start_date=\u0411\u043e\u0448\u043b\u0430\u043d\u0438\u0448 \u0441\u0430\u043d\u0430\u0441\u0438
 start_end_dates=Start/end dates
 start_end_value=Start/end value
