--- a/i18n/i18n_app_ckb.properties
+++ b/i18n/i18n_app_ckb.properties
@@ -1,23 +1,23 @@
-about=\u17a2\u17c6\u1796\u17b8
+about=\u062f\u0629\u0631\u0628\u0627\u0631\u0629\u064a
 add_legend=Add legend
-add_new=\u1794\u1793\u17d2\u1790\u17c2\u1798\u200b\u1790\u17d2\u1798\u17b8\u200b
-address=\u17a2\u17b6\u179f\u1799\u178a\u17d2\u178b\u17b6\u1793
+add_new=Add new
+address=Address
 add_to_dashboard=Add to dashboard
 aggregation_type=Aggregation type
 allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
 attribution=Attribution
 automatic=Automatic
-average=\u1795\u179b\u1798\u1792\u17d2\u1799\u1798
-bimonthly=\u179a\u17b6\u179b\u17cb\u1796\u17b8\u179a\u179f\u1794\u17d2\u178f\u17b6\u17a0\u17cd
+average=Average
+bimonthly=Bi-monthly
 boundary_layer=Boundary layer
 by_data_element=By data element
-cancel=\u1794\u17c4\u17c7\u1794\u1784\u17cb
+cancel=\u0644\u0627\u0628\u0631\u062f\u0646
 can_edit_and_view=Can edit and view
 can_view=Can view
 chart=Chart
 classes_method=Classes / method
-clear=\u179b\u17bb\u1794\u1785\u17c4\u179b
+clear=\u0628\u0627\u0643
 clear_map=Clear map
 clustering=Clustering
 code=Code
@@ -25,19 +25,19 @@ color_scale=Color scale
 coordinate_field=Coordinate field
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
-count=\u1795\u179b\u179a\u17b6\u1794\u17cb
-create=\u200b\u1794\u1784\u17d2\u1780\u17be\u178f
+count=Count
+create=Create
 created_by=Created by
 current_legends=Current legends
-daily=\u179a\u17b6\u179b\u17cb\u200b\u1790\u17d2\u1784\u17c3
+daily=Daily
 data=Data
 data_and_periods=Data and periods
-dataelement=\u1791\u17b7\u1793\u17d2\u1793\u1793\u17d0\u1799\u1792\u17b6\u178f\u17bb\u178a\u17be\u1798
+dataelement=\u062f\u0627\u062a\u0627\u064a \u0633\u0629\u0631\u0629\u0643\u064a
 dataelement_group=Data element group
 dataset=Data set
-delete=\u200b\u179b\u17bb\u1794\u200b
+delete=\u0633\u0631\u064a\u0646\u0629\u0648\u0629
 delete_favorite=Delete favorite
-details=\u179b\u1798\u17d2\u17a2\u17b7\u178f
+details=Details
 download=Download
 download_map_as_png=Download map as PNG
 drill_down_one_level=Drill down one level
@@ -49,7 +49,7 @@ elevation=Elevation
 edit_layer=Edit layer
 edit_legend=Edit legend
 email=Email
-end_date=\u1780\u17b6\u179b\u200b\u1794\u179a\u17b7\u1785\u17d2\u1786\u17c1\u1791\u200b\u1794\u1789\u17d2\u1785\u1794\u17cb\u200b
+end_date=\u062a\u0629\u0648\u0627\u0648 \u0643\u0631\u062f\u0646\u064a \u062f\u0627\u062a\u0627
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Equal counts
 equal_intervals=Equal intervals
@@ -84,7 +84,7 @@ has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
-home=\u1795\u17d2\u1791\u17b6\u17c6\u1784\u178a\u17be\u1798
+home=\u0645\u0627\u06b5\u0629\u0648\u0629
 indicator=Indicator
 indicator_group=Indicator group
 information=Information
@@ -93,7 +93,7 @@ invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
 last_2_sixmonths=Last 2 six-months
-last_3_months=Last 3 months
+last_3_months=\u0633\u06ce \u0645\u0627\u0646\u06af \u067e\u06ce\u0634\u0648\u0648\u062a\u0631
 last_4_quarters=Last 4 quarters
 last_4_weeks=Last 4 weeks
 last_5_financial_years=Last 5 financial years
@@ -104,13 +104,13 @@ last_12_weeks=Last 12 weeks
 last_52_weeks=Last 52 weeks
 last_bimonth=Last bi-month
 last_financial_year=Last financial year
-last_month=Last month
+last_month=\u0645\u0627\u0646\u06af\u06cc \u0695\u0627\u0628\u0631\u062f\u0648\u0648
 last_quarter=Last quarter
 last_sixmonth=Last six-month
-last_week=Last week
+last_week=\u0647\u06d5\u0641\u062a\u06d5\u06cc \u067e\u06ce\u0634\u0648\u0648\u062a\u0631
 last_5_years=Last 5 years
 last_year=Last year
-latitude=\u179a\u1799\u17c8\u1791\u1791\u17b9\u1784
+latitude=Latitude
 layer=Layer
 layers=Layers
 layer_stack_transparency=Layer stack / opacity
@@ -124,26 +124,26 @@ legendsets=Legend sets
 legend_symbolizer=Symbolizer
 legend_type=Legend type
 level=Level
-longitude=\u179a\u1799\u17c8\u1794\u178e\u17d2\u178f\u17c4\u1799
+longitude=Longitude
 low_color_size=Low color / size
 low_size=Low size
 manage_favorites=Manage favorites
 map=Map
-max=\u17a2\u178f\u17b7\u1794\u179a\u1798\u17b6
-min=\u17a2\u1794\u17d2\u1794\u1794\u179a\u1798\u17b6
+max=\u0632\u06cc\u0627\u062a\u0631\u06cc\u0646
+min=\u06a9\u06d5\u0645\u062a\u0631\u06cc\u0646
 min_max_c=Min/max \u00c2\u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
-monthly=\u179a\u17b6\u179b\u17cb\u200b\u1781\u17c2
-name=\u1788\u17d2\u1798\u17c4\u17c7
-next=\u1794\u1793\u17d2\u1791\u17b6\u1794\u17cb
+monthly=Monthly
+name=Name
+next=\u062f\u0627\u0647\u0627\u062a\u0648\u0648
 nighttime_lights=Nighttime lights
-no=\u1791\u17c1
+no=\u0646\u06d5\u062e\u06ce\u0631
 no_groupset_selected=No group set selected
 no_map_to_save=No map to save
-none=\u1782\u17d2\u1798\u17b6\u1793
+none=\u0647\u06cc\u0686\u06cc\u0627\u0646
 no_event_coordinates_found=No event coordinates found
 no_organisation_unit_levels=No organisation unit levels
 no_organisation_units_specified=No organisation units specified
@@ -158,17 +158,17 @@ openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
 options=Options
-organisation_unit=\u1795\u17d2\u1793\u17c2\u1780\u200b\u1793\u17c3\u200b\u17a2\u1784\u17d2\u1782\u1780\u17b6\u179a
+organisation_unit=\u064a\u0629\u0643\u0629\u064a \u0631\u064a\u0643\u062e\u0631\u0627\u0648
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisation unit group set
-organisation_units=Organisation units
+organisation_units= \u064a\u0629\u0643\u0629\u064a \u0631\u064a\u0643\u062e\u0631\u0627\u0648
 organisationunit_search=Organisation unit search
 osm_light=OSM Light
 overwrite=Overwrite
 overwrite_favorite=Overwrite favorite
-page=Page
+page=\u0644\u0627\u0628\u0629\u0631\u0629
 parent_unit=Parent unit
-period=\u1780\u17c6\u17a1\u17bb\u1784\u1796\u17c1\u179b
+period=\u0645\u0627\u0648\u0629
 period_type=Period type
 phone_number=Phone number
 placement=Placement
@@ -180,22 +180,22 @@ point_radius=Point radius
 population_density=Population density
 precipitation=Precipitation
 predefined=Predefined
-previous=\u1798\u17bb\u1793
-program=Program
+previous=\u0630\u064a\u064e\u0634\u0648\u0648
+program=\u0628\u0629\u0631\u0646\u0627\u0645\u0629
 program_indicators=Program indicators
 public_access=Public access
-quarterly=\u179a\u17b6\u179b\u17cb\u178f\u17d2\u179a\u17b8\u1798\u17b6\u179f
-relative=\u1791\u17c6\u1793\u17b6\u1780\u17cb\u1791\u17c6\u1793\u1784
+quarterly=Quarterly
+relative=Relative
 relocate=Relocate
 relocate_facility=Relocate facility
-remove=\u1799\u1780\u1785\u17c1\u1789
-rename=\u1794\u17d2\u178a\u17bc\u179a\u200b\u1788\u17d2\u1798\u17c4\u17c7
+remove=\u0644\u0627\u0628\u0631\u062f\u0646
+rename=Rename
 reporting_rates=Reporting rates
 revision=Revision
-search=\u179f\u17d2\u179c\u17c2\u1784\u179a\u1780
+search=\u0637\u0629\u0631\u0627\u0646
 search_for_favorites=Search for favorites
 search_for_user_groups=Search for user groups
-select=\u1787\u17d2\u179a\u17be\u179f\u200b\u179a\u17be\u179f
+select=\u0647\u06d5\u06b5\u0628\u0698\u0627\u0631\u062f\u0646
 select_groups=Select groups
 selection_mode=Selection mode
 select_dataset=Select dataset
@@ -205,32 +205,32 @@ select_levels=Select levels
 select_organisation_unit_groups=Select organisation unit groups
 select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Select organisation units
-select_period=\u1787\u17d2\u179a\u17be\u179f\u179a\u17be\u179f\u1780\u17c6\u17a1\u17bb\u1784\u1796\u17c1\u179b
-select_program=Select program
+select_period=Select period
+select_program=\u0628\u0629\u0631\u0646\u0627\u0645\u0629 \u0647\u0629\u0644\u0628\u0632\u064a\u0631\u0629
 select_service=Select service
 select_stage=Select stage
 select_sub_units=Select sub-units
 select_year=Select year
 service_url=Service URL
-share=\u1785\u17c2\u1780\u179a\u17c6\u179b\u17c2\u1780
+share=Share
 share_with_other_people=Share with others
 sharing_settings=Sharing settings
 show=Show
 show_circular_area=Show circular area with radius (m)
 show_information_sheet=Show information
 show_lon_lat=Show longitude/latitude
-sixmonthly=\u179a\u17b6\u179b\u17cb\u1786\u1798\u17b6\u179f
-sixmonthly_april=\u1794\u17d2\u179a\u1785\u17b6\u17c6\u1786\u1798\u17b6\u179f\u200b\u1796\u17b8\u1781\u17c2\u1798\u17c1\u179f\u17b6
+sixmonthly=Six-monthly
+sixmonthly_april=Six-monthly April
 stage=Stage
-start_date=\u1780\u17b6\u179b\u1794\u179a\u17b7\u1785\u17d2\u1786\u17c1\u1791\u200b\u1785\u17b6\u1794\u17cb\u1795\u17d2\u178a\u17be\u1798\u200b
+start_date=\u062f\u0629\u0633\u062a\u0628\u064a\u0643\u0631\u062f\u0646\u064a \u062f\u0627\u062a\u0627
 start_end_dates=Start/end dates
 start_end_value=Start/end value
 stddev=Standard deviation
 steps=Steps
-style=\u200b\u179a\u1785\u1793\u17b6\u1794\u1791
+style=Style
 sub_units=Sub-units
 sub_x2_units=Sub-x2-units
-sum=\u1795\u179b\u200b\u1794\u17bc\u1780
+sum=Sum
 swap_lon_lat=Swap longitude/latitude
 symbol_layer=Facility layer
 table=Table
@@ -243,34 +243,34 @@ thematic_layer_3_legend=Thematic layer 3 legend
 thematic_layer_4_legend=Thematic layer 4 legend
 this_bimonth=This bi-month
 this_financial_year=This financial year
-this_month=This month
+this_month=\u0626\u06d5\u0645 \u0645\u0627\u0646\u06af\u06d5
 this_quarter=This quarter
 this_sixmonth=This six-month
-this_week=This week
+this_week=\u0626\u06d5\u0645 \u0647\u06d5\u0641\u062a\u06d5\u06cc\u06d5
 this_year=This year
 time_since_last_data_update=Elapsed time since last data update
-today=Today
+today=\u0626\u06d5\u0645\u0695\u06c6
 totals=Totals
-update=\u1792\u17d2\u179c\u17be\u200b\u1794\u1785\u17d2\u1785\u17bb\u1794\u17d2\u1794\u1793\u17d2\u1793\u1797\u17b6\u1796
-username=\u1788\u17d2\u1798\u17c4\u17c7\u200b\u1782\u178e\u1793\u17b8
+update=\u0646\u0648\u064a\u064e \u0643\u0631\u062f\u0646\u0629\u0648\u0629
+username=Username
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=User organisation unit
 user_ou=User OU
 user_sub_units=User sub-units
 user_sub_x2_units=User sub-x2-units
-value=\u178f\u1798\u17d2\u179b\u17c3
-value_type=Value Type
+value=\u0628\u0629\u0647\u0627
+value_type=Value type
 variance=Variance
-version=\u1780\u17c6\u178e\u17c2
-weekly=\u179a\u17b6\u179b\u17cb\u200b\u179f\u1794\u17d2\u178a\u17b6\u17a0\u17cd
+version=Version
+weekly=Weekly
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
 weekly_saturday=Weekly (Start Saturday)
 weekly_sunday=Weekly (Start Sunday)
 write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
-yearly=\u1794\u17d2\u179a\u1785\u17b6\u17c6\u1786\u17d2\u1793\u17b6\u17c6
-yes=\u1794\u17b6\u1791/\u1785\u17b6\u179f
+yearly=Yearly
+yes=\u06d5\u06b5\u06ce
 yesterday=Yesterday
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
