ac49bed fix(translations): sync translations from transifex (v29)

--- a/i18n/i18n_app_cs.properties
+++ b/i18n/i18n_app_cs.properties
@@ -12,12 +12,12 @@ average=Average
 bimonthly=Bi-monthly
 boundary_layer=Boundary layer
 by_data_element=By data element
-cancel=Cancel
+cancel=Zru\u0161it
 can_edit_and_view=Can edit and view
 can_view=Can view
 chart=Chart
 classes_method=Classes / method
-clear=Clear
+clear=Vy\u010distit
 clear_map=Clear map
 clustering=Clustering
 code=Code
@@ -27,7 +27,7 @@ coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
 count=Count
 create=Create
-created_by=Created by
+created_by=Vytvo\u0159il
 current_legends=Current legends
 daily=Daily
 data=Data
@@ -104,10 +104,10 @@ last_12_weeks=Last 12 weeks
 last_52_weeks=Last 52 weeks
 last_bimonth=Last bi-month
 last_financial_year=Last financial year
-last_month=Last month
+last_month=Minul\u00fd m\u011bs\u00edc
 last_quarter=Last quarter
 last_sixmonth=Last six-month
-last_week=Last week
+last_week=Minul\u00fd t\u00fdden
 last_5_years=Last 5 years
 last_year=Last year
 latitude=Latitude
