705431e fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_cs.properties
+++ b/i18n/i18n_app_cs.properties
@@ -9,7 +9,7 @@ and_or_lower_than=And/or lower than
 attribution=Attribution
 automatic=Automatic
 average=Average
-bimonthly=Bi-monthly
+bimonthly=Dvakr\u00e1t za m\u011bs\u00edc
 boundary_layer=Boundary layer
 by_data_element=By data element
 cancel=Zru\u0161it
