430e327 fix(translations): sync translations from transifex (v29)

--- a/i18n/i18n_app_cs.properties
+++ b/i18n/i18n_app_cs.properties
@@ -29,7 +29,7 @@ count=Count
 create=Create
 created_by=Vytvo\u0159il
 current_legends=Current legends
-daily=Daily
+daily=Denn\u011b
 data=Data
 data_and_periods=Data and periods
 dataelement=Data element
@@ -37,7 +37,7 @@ dataelement_group=Data element group
 dataset=Data set
 delete=Smazat
 delete_favorite=Delete favorite
-details=Details
+details=Detaily
 download=Download
 download_map_as_png=Download map as PNG
 drill_down_one_level=Drill down one level
@@ -66,7 +66,7 @@ facility_layer_legend=Facility layer legend
 favorite_name=Favorite name
 favorite_outdated_create_new=Favorite is outdated - please create a new one
 favorites=Favorites
-filter=Filter
+filter=Filtr
 filter_by_value=Filter by value
 financial_april=Financial year (Start April)
 financial_july=Financial year (Start July)
@@ -97,13 +97,13 @@ last_3_months=Last 3 months
 last_4_quarters=Last 4 quarters
 last_4_weeks=Last 4 weeks
 last_5_financial_years=Last 5 financial years
-last_6_bimonths=Last 6 bi-months
+last_6_bimonths=Posledn\u00edch 6 dvou-m\u011bs\u00edc\u016f
 last_6_months=Last 6 months
 last_12_months=Last 12 months
 last_12_weeks=Last 12 weeks
 last_52_weeks=Last 52 weeks
 last_bimonth=Last bi-month
-last_financial_year=Last financial year
+last_financial_year=Posledn\u00ed finan\u010dn\u00ed rok
 last_month=Minul\u00fd m\u011bs\u00edc
 last_quarter=Last quarter
 last_sixmonth=Last six-month
@@ -168,7 +168,7 @@ overwrite=Overwrite
 overwrite_favorite=Overwrite favorite
 page=Page
 parent_unit=Parent unit
-period=Period
+period=Obdob\u00ed
 period_type=Period type
 phone_number=Phone number
 placement=Placement
@@ -188,11 +188,11 @@ quarterly=Quarterly
 relative=Relativn\u00ed
 relocate=Relocate
 relocate_facility=Relocate facility
-remove=Remove
+remove=Odebrat
 rename=Rename
 reporting_rates=Reporting rates
 revision=Revision
-search=Search
+search=Hledat
 search_for_favorites=Search for favorites
 search_for_user_groups=Search for user groups
 select=Vybrat
@@ -250,7 +250,7 @@ this_week=This week
 this_year=This year
 time_since_last_data_update=Elapsed time since last data update
 today=Today
-totals=Totals
+totals=Sou\u010dty
 update=Aktualizovat
 username=Username
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
@@ -269,7 +269,7 @@ weekly_saturday=Weekly (Start Saturday)
 weekly_sunday=Weekly (Start Sunday)
 write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
-yearly=Yearly
+yearly=Ro\u010dn\u011b
 yes=Ano
 yesterday=Yesterday
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
